--- a/TrustNTA/Views/Employer/JobManagement.cshtml
+++ b/TrustNTA/Views/Employer/JobManagement.cshtml
@@ -36,7 +36,6 @@
             <td>Status</td>
             <td>Interested Clients</td>
             <td>Edit</td>
-            <td>Remove</td>
         </tr>
     </thead>
     <tbody>
@@ -44,7 +43,6 @@
         @if (Model.employerVacancies == null || Model.employerVacancies.Count() == 0)
         {
             <tr>
-                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -85,7 +83,6 @@
                     </td>
                     <td>--</td>
                     <td><i data-vid="@vacancy.employerVacancyId" class="fas fa-edit btn-edit"></i></td>
-                    <td><i data-vid="@vacancy.employerVacancyId" class="fas fa-trash-alt btn-delete"></i></td>
                 </tr>
             }
         }
@@ -209,11 +206,11 @@
                         </div>
                         <div class="form-group col-md-6">
                             <label for="inputEmail4">Vacancy Status</label>
-                            <select class="form-control">
-                                <option selected disabled>Job Status</option>
-                                <option>Open</option>
-                                <option>Filled</option>
-                                <option>Closed</option>
+                            <select id="update-vacancy-status" class="form-control">
+                                <option value="0" selected disabled>Job Status</option>
+                                <option value="Open">Open</option>
+                                <option value="Filled">Filled</option>
+                                <option value="Closed">Closed</option>
                             </select>
                         </div>
                     </div>
