--- a/TrustNTA/Views/Account/Register.cshtml
+++ b/TrustNTA/Views/Account/Register.cshtml
@@ -74,7 +74,7 @@
                         <label class="login-label">Email address</label>
                         <input class="custom-input" type="password" placeholder="Enter email address registered with Heart" />
 
-                        <button style="margin-top: 14px" type="button" class="btn btn-light btn-block sign-in">ACTIVATE YOUR ACCOUNT</button>
+                        <button style="margin-top: 14px" type="button" class="btn btn-light btn-block sign-in">SEND ACTIVATION LINK</button>
                     </div>
                     <div class="tab-pane @employerActive" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                         <div class="employer-register-as">
