--- a/TrustNTA/Views/Graduate/Dashboard.cshtml
+++ b/TrustNTA/Views/Graduate/Dashboard.cshtml
@@ -4,34 +4,35 @@
 }
 
 <div class="row">
-    <div class="col-sm col-padding-lr-adjust">
+    <div class="col-sm-3 col-padding-lr-adjust">
         <div class="dashboard-statistic ds-jinterested-hover">
             <img class="stats-icon" src="~/Content/Images/job_interested.png" width="50" height="50" />
             <h4 class="stats-title">Jobs Interested</h4>
             <h5 class="stats-counter stats-counter-interested">02</h5>
         </div>
     </div>
-    <div class="col-sm col-padding-lr-adjust">
+    <div class="col-sm-3 col-padding-lr-adjust">
         <div class="dashboard-statistic ds-offers-hover">
             <img class="stats-icon" src="~/Content/Images/job_offers.png" width="50" height="50" />
             <h4 class="stats-title">Job Offers</h4>
             <h5 class="stats-counter stats-counter-offers">04</h5>
         </div>
     </div>
-    <div class="col-sm col-padding-lr-adjust">
+    <div class="col-sm-3 col-padding-lr-adjust">
         <div class="dashboard-statistic ds-cjobs-hover">
             <img class="stats-icon" src="~/Content/Images/jobs_created.png" width="50" height="50" />
             <h4 class="stats-title">Created Jobs</h4>
             <h5 class="stats-counter stats-counter-created">15</h5>
         </div>
     </div>
-    <div class="col-sm col-padding-lr-adjust">
+    <div class="col-sm-3 col-padding-lr-adjust">
         <div class="dashboard-statistic ds-estatus-hover">
             <img class="stats-icon" src="~/Content/Images/employment_status.png" width="50" height="50" />
             <h4 class="stats-title">Employment Status</h4>
             <h5 class="stats-counter stats-counter-employ-status">U</h5>
         </div>
     </div>
+
 </div>
 <div class="all-job-posts">
     <div class="jpost-main">
@@ -75,7 +76,7 @@
 <hr style="width:100%; margin-top: 2px; margin-bottom:2px;" />
 <div class="jobs-container">
     <div class="row row-vspace">
-        <div class="col-sm col-padding-lr-adjust">
+        <div class="col-sm-3 col-padding-lr-adjust">
             <div class="job">
                 <div class="company-img">
                     <img alt="Company Logo" src="" />
@@ -107,7 +108,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm col-padding-lr-adjust">
+        <div class="col-sm-3 col-padding-lr-adjust">
             <div class="job">
                 <div class="company-img">
                     <img alt="Company Logo" src="" />
@@ -139,7 +140,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm col-padding-lr-adjust">
+        <div class="col-sm-3 col-padding-lr-adjust">
             <div class="job">
                 <div class="company-img">
                     <img alt="Company Logo" src="" />
@@ -171,7 +172,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm col-padding-lr-adjust">
+        <div class="col-sm-3 col-padding-lr-adjust">
             <div class="job">
                 <div class="company-img">
                     <img alt="Company Logo" src="" />
@@ -203,6 +204,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
