--- a/TrustNTA/Content/Site.css
+++ b/TrustNTA/Content/Site.css
@@ -286,6 +286,7 @@ html {
         background-color: white;
         display: flex;
         flex-direction: column;
+        margin-bottom:10px;
     }
 
 .company-img {
