--- a/TrustNTA/Views/Shared/_TrustNTA_Seeker_Layout.cshtml
+++ b/TrustNTA/Views/Shared/_TrustNTA_Seeker_Layout.cshtml
@@ -42,7 +42,7 @@
                     </form>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="false"> My Portfolio</a>
+                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="false"> Dashboard</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" tabindex="-1" aria-disabled="false"> Jobs Created</a>
