--- a/TrustNTA/Views/Account/Login.cshtml
+++ b/TrustNTA/Views/Account/Login.cshtml
@@ -67,8 +67,8 @@
 
                 <div class="tab-content">
                     <div class="tab-pane @seekerActive" id="home" role="tabpanel" aria-labelledby="home-tab">
-                        <label class="login-label">Graduate Identifier</label>
-                        <input class="custom-input" type="text" id="graduate-identifier" placeholder="Graduate Identifier" />
+                        <label class="login-label">Username</label>
+                        <input class="custom-input" type="text" id="graduate-identifier" placeholder="Enter the username for your account" />
                         <label class="login-label">Password</label>
                         <input class="custom-input" id="graduate-password" type="password" placeholder="Password" />
 
