--- a/TrustNTA/Views/Shared/_TrustNTA_Employer_Layout.cshtml
+++ b/TrustNTA/Views/Shared/_TrustNTA_Employer_Layout.cshtml
@@ -25,7 +25,7 @@
 
                     <p style="margin-bottom: 15px" class="sidebar-subheader">Main</p>
                     <ul>
-                        <li><a href="/employer"><i class="fas fa-chart-line"></i>Dashboard</a></li>
+                        <li><a href="/employer/index"><i class="fas fa-chart-line"></i>Dashboard</a></li>
                         <li><a href="/employer/jobmanagement"><i class="fas fa-briefcase"></i>Job Management</a></li>
                         <li><a href="#"><i class="fas fa-user-tie"></i>Suitable Candidates</a></li>
                     </ul>
