--- a/TrustNTA/Views/Graduate/JobManagement.cshtml
+++ b/TrustNTA/Views/Graduate/JobManagement.cshtml
@@ -66,7 +66,7 @@
                 <form style="margin-right: 10px; margin-left: 10px;">
                     <div class="form-row">
                         <div style="margin-bottom:0px" class="form-group col-md-9">
-                            <select id="inputState" class="form-control form-control-sm">
+                            <select id="loc-prefs-selector" class="form-control form-control-sm">
                                 <option selected disabled>Select a location</option>
                                 @if (Model != null && Model.jobLocations != null)
                                 {
